# UAS-AIOS

./: .gitignore  AGENTS.md  AIOS — 企业智能经营操作系统产品 BP V1.0.md  AI_APPLICATION_PARADIGM_REPORT.md  ASUI_STRATEGY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  UAS_AIOS_ARCHITECTURE.md  aios_business_plan.html  uas_aios_pitch.html
asui-cli/: README.md  pyproject.toml
asui-cli/src/asui/: __init__.py  __main__.py  domain_binding.py  edh_dual_track.py  enterprise_template.py  init.py  intent_hub.py  main.py  org_identity.py  pipaw_cs_agent.py  pipaw_task_panel.py  selfpaw_template.py  templates.py  triadic_template.py  uas_subapp_template.py
asui-cli/src/asui/connectors/: __init__.py  base.py  mock_bpm.py  mock_crm.py  mock_itsm.py  mock_oa.py  router.py
asui-cli/src/asui/engine/: __init__.py  agent_orchestrator.py  cognitive_engine.py  cognitive_router.py  context_injector.py  evolution_engine.py  execution.py  perception.py  planning.py  reasoning.py  reflection.py  runtime_manager.py  tool_gateway.py  understanding.py
asui-cli/src/asui/protocol/: __init__.py  platform.py  workflow.py
asui-cli/src/asui/runtime/: __init__.py  agent_orchestrator.py  (+18 more)
asui-cli/tests/: test_ai_recruitment_os_agent_runtime.py  test_ai_recruitment_os_prototype.py  test_autonomous_runtime_and_recruitment_os.py  test_edh_connectors.py  test_edh_dual_track_loop.py  test_enterprise_ecosystem.py  test_intent_escalation.py  test_org_identity.py  test_pipaw_cs_agent.py  test_selfpaw_swarm_template.py  test_triadic_swarm_template.py  test_uas_subapp_template.py
(+691 files in other folders)
