[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asui-cli"
version = "0.1.0"
description = "ASUI 架构脚手架 - 快速初始化知识驱动型 AI 系统项目"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "ACA-protocol"}]
keywords = ["asui", "ai", "scaffolding", "knowledge-driven"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[project.scripts]
asui = "asui.main:main"

[tool.setuptools.packages.find]
where = ["src"]
